--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropdown-hook": "^1.0.1",
+    "react-paginate": "^7.1.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
     "typescript": "^4.2.3",
