--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.7",
     "i": "^0.3.6",
     "npm": "^7.11.1"
