--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
+    "polished": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropdown-hook": "^1.0.1",
